Fix alignment issues for checkboxes

--- a/recipe/css/styles.css
+++ b/recipe/css/styles.css
@@ -1,9 +1,8 @@
 body {
-    background-color: #ffb6c1;
-    color: #333;
-    font-family: Arial, sans-serif;
+  background-color: #ffb6c1;
+  color: #333;
+  font-family: Arial, sans-serif;
 }
-
 
 .description {
   width: 600px;  
@@ -11,57 +10,71 @@ body {
 }
 
 .ga-maamli-regular, h1 {
-    font-family: "Ga Maamli", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 48px;
-    color: #007bff;
-  }
+  font-family: "Ga Maamli", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 48px;
+  color: #007bff;
+}
 
-  h1 {
-    display: block; 
-    width: 60%; 
-    margin: 0 auto; 
-    text-align: center;
-    font-size: 2.5em; 
-    padding: 20px; 
-  }
+h1 {
+  display: block; 
+  width: 60%; 
+  margin: 0 auto; 
+  text-align: center;
+  font-size: 2.5em; 
+  padding: 20px; 
+}
 
-  h3 {
-    font-family: "Ga Maamli";
-    font-weight: 400;
-    font-style: normal;
-    font-size: 24px;
-  }
+h3 {
+  font-family: "Ga Maamli";
+  font-weight: 400;
+  font-style: normal;
+  font-size: 24px;
+}
 
-  #image {
-    width: 600px;
-    height: 600px;
-    object-fit: cover;
-  }
+#image {
+  width: 600px;
+  height: 600px;
+  object-fit: cover;
+}
 
-  .left {
-    width: 600px;
-    float: left;
-    margin-right: 30px;
-    padding: 20px;
-  }
+.left {
+  width: 600px;
+  float: left;
+  margin-right: 30px;
+  padding: 20px;
+}
 
-  .right {
-    width: 600px;
-    float: right;
-    margin-left: 30px;
-    padding: 20px;
-  }
+.right {
+  width: 600px;
+  float: right;
+  margin-left: 30px;
+  padding: 20px;
+}
 
-  a {
-    color: white;
-    text-decoration: none;
+a {
+  color: white;
+  text-decoration: none;
 }
 
 a:hover {
-    color: palevioletred;
-    text-decoration: none; 
+  color: palevioletred;
+  text-decoration: none; 
+}
+
+.checkbox-group {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px; 
+}
+
+.checkbox-group input[type="checkbox"] {
+  margin-right: 10px; 
+}
+
+.checkbox-group label {
+  font-size: 16px; 
 }
 
 #myDiv {
